--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>MaLubullule</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but MaLubullule doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <title>MaLubullule</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.js"></script>
+
+  <!-- Primary Meta Tags -->
+  <title>Calculer son taux d'alcool - MaLubullule</title>
+  <meta name="title" content=" Calculer son taux d'alcool - MaLubullule" />
+  <meta name="description"
+    content="Connaitre son taux d'alcool n'aura jamais été aussi simple. Peter sa biere c'est bien, finir sa lubullule c'est mieux. " />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://malubullule.com/" />
+  <meta property="og:title" content=" Calculer son taux d'alcool - MaLubullule" />
+  <meta property="og:description"
+    content="Connaitre son taux d'alcool n'aura jamais été aussi simple. Peter sa biere c'est bien, finir sa lubullule c'est mieux. " />
+  <meta property="og:image" content="<%= BASE_URL %>favicon.ico" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://malubullule.com/" />
+  <meta property="twitter:title" content=" Calculer son taux d'alcool - MaLubullule" />
+  <meta property="twitter:description"
+    content="Connaitre son taux d'alcool n'aura jamais été aussi simple. Peter sa biere c'est bien, finir sa lubullule c'est mieux. " />
+  <meta property="twitter:image" content="<%= BASE_URL %>favicon.ico" />
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but MaLubullule doesn't work properly without JavaScript
+      enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
