--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
   <title>MaLubullule</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
@@ -26,7 +26,7 @@
   <meta property="og:title" content=" Calculer son taux d'alcool - MaLubullule" />
   <meta property="og:description"
     content="Connaitre son taux d'alcool n'aura jamais été aussi simple. Peter sa biere c'est bien, finir sa lubullule c'est mieux. " />
-  <meta property="og:image" content="<%= BASE_URL %>favicon.ico" />
+  <meta property="og:image" content="/logo_static_malubullule.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
@@ -34,7 +34,7 @@
   <meta property="twitter:title" content=" Calculer son taux d'alcool - MaLubullule" />
   <meta property="twitter:description"
     content="Connaitre son taux d'alcool n'aura jamais été aussi simple. Peter sa biere c'est bien, finir sa lubullule c'est mieux. " />
-  <meta property="twitter:image" content="<%= BASE_URL %>favicon.ico" />
+  <meta property="twitter:image" content="/logo_static_malubullule.png" />
 </head>
 
 <body>
